--- a/Nomination/styles.css
+++ b/Nomination/styles.css
@@ -2,6 +2,10 @@
     font-family: sans-serif;
 }
 
+.container {
+    margin: 5px;
+}
+
 .title {
     text-align: center;
     margin: 40px auto 30px;
@@ -11,13 +15,15 @@
     width: 350px;
     height: 450px;
     margin: auto;
+    border-style: solid;
+    border-color: rgb(151, 148, 148);
 }
 
+
+
 .flip-card-back {
-    background-color: lightcoral;
-    color: black;
-    transform:rotateY(180deg);
-    z-index: 1;
+    background-color: rgb(8, 0, 85);
+    color: white;
 }
 
 .flip-card-back .back-header {
@@ -34,23 +40,17 @@
 .flip-card-inner {
     position: relative;
     height: 100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
 }
 
-.flip-card-back , .flip-card-front {
+.flip-card-back  {
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
 }
 
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-}
 
 .flip-card-back .back-footer {
     height: 55%;
-    padding: 0 15px;
+    padding: 5px 15px;
     
 }
